# chip35_dl_coin

./: .gitignore  COMPILE_PUZZLES.md  Cargo.toml  DESIGN.md  NOTICE  README.md
.github/workflows/: ci.yml  publish-npm.yml
app/: .env.example  README.md  next.config.ts  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/components/: MintForm.tsx  StoreList.tsx  ToastProvider.tsx  UpdateForm.tsx  WalletConnector.tsx  WalletProvider.tsx
app/app/lib/: chiaAddress.ts  coinset.ts  convert.ts  injectedWallet.ts  pendingCoins.ts  registry.ts  storeOps.ts  walletConnect.ts  wasm.ts
app/tests/: injectedWallet.mjs
core/: Cargo.toml
core/examples/: dump_fixtures.rs
core/src/: cat.rs  collection.rs  deploy_token.rs  did.rs  dig.rs  error.rs  gating.rs  lazy_mint.rs  lib.rs  metadata.rs  nft.rs  offer.rs  payment.rs  store.rs  subscription.rs  types.rs
core/tests/: asset_branches.rs  assets.rs  builders.rs  delegation.rs  deploy_token.rs  dig_capsule.rs  error_codes.rs  lazy_mint.rs  lazy_mint_branches.rs  lazy_mint_sim.rs  metadata.rs  monetization.rs  pure_logic.rs  store_extra.rs
docs/superpowers/plans/: 2026-05-30-chip35-dl-coin.md
docs/superpowers/specs/: 2026-05-30-chip35-dl-coin-design.md
include/: condition_codes.clib  merkle_utils.clib  sha256tree.clib
puzzles/: README.md  delegation_layer.clsp  delegation_layer.clsp.hex  lazy_mint_direct_delegate.clsp  lazy_mint_direct_delegate.clsp.hex  lazy_mint_offer_delegate.clsp  lazy_mint_offer_delegate.clsp.hex  lazy_mint_pre_launcher.clsp  lazy_mint_pre_launcher.clsp.hex  writer_filter.clsp  writer_filter.clsp.hex
wasm/: Cargo.toml  package.json
wasm/scripts/: patch-pkg.mjs
wasm/src/: asset_types.rs  lazy_mint_types.rs  lib.rs  monetization_types.rs  ts.rs  types.rs
wasm/tests/: asset_wasm.rs  builders.mjs  delegation_wasm.rs  fixtures.json  monetization_wasm.rs  version_wasm.rs
