[package]
name = "chip35-dl-coin"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Isolated CHIP-0035 Chia DataLayer store coin driver (offline spend-bundle construction)."
repository = "https://github.com/DIG-Network/chip35_dl_coin"

[dependencies]
chia-bls = "0.26.0"
chia-protocol = { version = "0.26.0", features = ["serde"] }
chia-sha2 = "0.26.0"
chia-puzzle-types = "0.26.0"
chia-puzzles = "0.20.1"
chia-traits = "0.26.0"
chia-sdk-driver = { version = "0.30.0", features = ["chip-0035", "action-layer", "offer-compression"] }
chia-sdk-types  = { version = "0.30.0", features = ["chip-0035", "action-layer"] }
clvm-traits = "0.26.0"
clvmr = "0.14.0"
thiserror = "1"
hex = "0.4"
hex-literal = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# The Chia Simulator — runs the lazy-mint commit+claim spends on a simulated chain to PROVE the
# minted NFT actually exists, is owned by the claimer, and its lineage traces to the creator DID
# (core/tests/lazy_mint_sim.rs). Version pinned to the same 0.30 line as chia-sdk-driver.
chia-sdk-test = "0.30.0"
clvm-utils = "0.26.0"
anyhow = "1"
